# baktu

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
.github/workflows/: cargo.yml  ci.yml  deploy.yml  deploy_docs.yml  mdBook.yml
dev-env/: todo_config
dev-env/git-hooks/: pre-commit
doc/mdbook/: .gitignore  book.toml
doc/mdbook/src/: SUMMARY.md  getting-started.md  index.md  installation.md  quick-start.md  roadmap.md  testing-roadmap.md  why-baktu-exists.md
doc/mdbook/src/repositories/v1/: access-with-unix-tools.md  index.md
doc/mdbook/theme/: index.hbs
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/mount/: fs_impl.rs  mod.rs
src/file/: filekey.rs  ioctl_getflags.rs  mod.rs  statx.rs  xattrs.rs
src/repo/: meta_file.rs  mod.rs  site.rs  snapshot.rs  tag_file.rs
src/util/: dsv.rs  ext.rs  hex.rs  mod.rs  nsv.rs
templates/: BAKTU_REPO.TAG  site_config.toml
tests/: cli.rs
xattr-helper/: Makefile  get-all-xattrs.cpp
