[package]
name = "baktu"
version = "0.1.0"
authors = ["OrthogonalScribe <OrthogonalScribe@gmail.com>"]
description = "A tool to create and manipulate backup repositories in a simple augmented rsnapshot-like format."
categories = ["command-line-utilities", "filesystem"]
keywords = ["backup", "incremental", "deduplication", "rsnapshot"]
license = "AGPL-3.0-only"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
blake3 = "1.3.3"
caps = "0.5.5"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
exitcode = "1.1.2"
fuse-rs = { git = "https://github.com/OrthogonalScribe/fuse-rs/", branch = "ver_bump" }
ioctls = "0.6.1"
libc = "0.2.141"
linux-raw-sys = "0.3.1"
log = "0.4.17"
nix = "0.26.2"
once_cell = "1.17.1"
pathdiff = "0.2.1"
serde = { version = "1.0.160", features = ["derive"] }
tilde-expand = "0.1.1"
toml = "0.7.3"
walkdir = "2.3.2"
xattr = "1.0.0"
